--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.3",
+    "fs": "0.0.1-security",
     "mongoose": "^6.2.8",
     "multer": "^1.4.4"
   }
